welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: type mismatch;
 found   : Int
 required: Boolean
    else if(getY() == y-1 && getX()! = getMondeLargeur()-1){setPos(getX()+1,0)}
                                 ^